syntax = "proto2";

package rv.protos;

import "google/protobuf/struct.proto";

message VectorSourceConfig {
    message VectorTile {
        required string uri = 1;
        required int32 zoom = 2;
        required string id_field = 3;
    }

    message GeoJSON {
        required string uri = 1;
    }

    oneof vector_source_config {
        VectorTile mbtiles = 1;
        GeoJSON geojson = 2;
        google.protobuf.Struct custom_config = 3;
    }

    required string source_type = 4;
    optional google.protobuf.Struct class_id_to_filter = 5;
    optional int32 default_class_id = 6;
    optional google.protobuf.Struct line_bufs = 7;
    optional google.protobuf.Struct point_bufs = 8;
}
